[package]
edition = "2024"
version = "1.0.0"
name = "muxwarden"
description = "A TUI for managing SSH multiplex connections and port forwarding"

[[bin]]
name = "muxwarden"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "process", "fs"] }

# Port forwarding enumeration
netstat2 = "0.11"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Command Line Argument Parser
clap = { version = "4.5", features = ["derive"] }
